pages/services/beta-storage/0.4.0-beta/cli-references/dcos-storage-profile/dcos-storage-profile-list/index.md
---
layout: layout.pug
navigationTitle: dcos storage profile list
title: dcos storage profile list
menuWeight: 0
notes: Code generated by docgen.go, DO NOT EDIT
enterprise: true
origin: github.com/mesosphere/dcos-storage/cli/pkg/cmd/cmd_profile_list.go
---
## dcos storage profile list

List volume profiles.

### Synopsis

Arguments:

    <profiles>  A space-separated list of profiles to list. This argument is
                optional. If it is not provided all profiles will be listed.

List volume profiles.

```bash
dcos storage profile list [<profiles>] [flags]
```

### Examples

1. Create two volume profiles then list them:

```bash
# Create the 'safe' profile.
$ cat <<EOF | dcos storage profile create
{
    "name": "safe",
    "description": "Volumes backed by RAID-1 devices.",
    "spec": {
        "provider-selector": {
            "plugin": "lvm",
            "matches": {
                "labels": {"raid": "1"}
            }
        },
        "mount": {}
    }
}
EOF

# Create the 'archive' profile.
$ cat <<EOF | dcos storage profile create
{
    "name": "archive",
    "description": "Archived storage.",
    "spec": {
        "provider-selector": {
            "plugin": "lvm",
            "matches": {
                "labels": {
                    "rotational": "true"
                }
            }
        },
        "mount": {}
    }
}
EOF

# Deactivate the 'archive' volume profile.
$ dcos storage profile deactivate archive

$ dcos storage profile list --all
TYPE  NAME     STATUS
lvm   archive  INACTIVE
lvm   safe     ACTIVE

$ dcos storage profile list --all --json
{
    "profiles": [
        {
            "name": "archive",
            "description": "Archived storage.",
            "spec": {
                "provider-selector": {
                    "plugin": "lvm",
                    "matches": {
                        "labels": {
                            "rotational": "true"
                        }
                    }
                },
                "mount": {}
            },
            "status": {
                "phase": "INACTIVE",
                "last-changed": "0001-01-01T00:00:00Z",
                "last-updated": "0001-01-01T00:00:00Z"
            }
        },
        {
            "name": "safe",
            "description": "Volumes backed by RAID-1 devices.",
            "spec": {
                "provider-selector": {
                    "plugin": "lvm",
                    "matches": {
                        "labels": {
                            "raid": "1"
                        }
                    }
                },
                "mount": {}
            },
            "status": {
                "phase": "ACTIVE",
                "last-changed": "0001-01-01T00:00:00Z",
                "last-updated": "0001-01-01T00:00:00Z"
            }
        }
    ]
}

$ dcos storage profile list safe --json
{
    "profiles": [
        {
            "name": "safe",
            "description": "Volumes backed by RAID-1 devices.",
            "spec": {
                "provider-selector": {
                    "plugin": "lvm",
                    "matches": {
                        "labels": {
                            "raid": "1"
                        }
                    }
                },
                "mount": {}
            },
            "status": {
                "phase": "ACTIVE",
                "last-changed": "0001-01-01T00:00:00Z",
                "last-updated": "0001-01-01T00:00:00Z"
            }
        }
    ]
}
```

### Options

```bash
  --all    Display inactive profiles.
  --json   Display the list of volume profiles in json format.
```

### Options inherited from parent commands

```bash
  -h, --help               Help for this command.
  --timeout duration   Override the default request timeout. (default 55s)
```

### SEE ALSO

* [dcos storage profile](../)	 - Manage volume profiles.

